--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ configure(allprojects) { project ->
 configure(subprojects) { project ->
     // All project inherits the same versioning number
     ext.version = rootProject.version
+    ext.distrace_tag = rootProject.docker_tag
 
     repositories {
         mavenCentral()
