--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -13,7 +13,7 @@ ext {
 
 task createDockerfile(type: Dockerfile) {
     destFile = dockerFile
-    from 'ubuntu:yakkety'
+    from 'ubuntu:xenial'
     maintainer "Jakub Hava"
 
     environmentVariable "JAVA_HOME", "/usr/lib/jvm/java-8-oracle"
