--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# ignore CLion priject files
+# ignore CLion project files
 /core-agent/.idea
 
-# Native agent logs logs
+# Native agent logs
 distrace_*.log
 
 #generated folder for logs
