--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -55,6 +55,7 @@ task createDockerfile(type: Dockerfile) {
     // we do it in one command to minimize the docker image size by removing dependencies
     // required to build the libraries
     runCommand """\\
+                apt-get -q -y update && \\
                 apt-get --fix-missing -q -y --no-install-recommends install python \
                 git make cmake gcc g++ libboost-system-dev libboost-filesystem-dev && \\
                 \
