--- a/examples/H2OGBMMonitoring/app/build.gradle
+++ b/examples/H2OGBMMonitoring/app/build.gradle
@@ -8,7 +8,7 @@ description = "Simple application demostrating instrumentation of distrubuted GB
 // Configure project properties
 //
 ext {
-    h2oVersion = "3.14.0.7"
+    h2oVersion = rootProject.h2oVersion
 }
 
 
