--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -90,7 +90,7 @@ task createDockerfile(type: Dockerfile) {
                """
     workingDir "/opt/distrace"
     
-    entryPoint "java -jar /opt/zipkin/zipkin.jar & && /bin/bash"
+    entryPoint "java -jar /opt/zipkin/zipkin-server-2.11.7-exec.jar & && /bin/bash"
 }
 
 task cleanDockerfile(type: Delete) {
