--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -72,15 +72,7 @@ task createDockerfile(type: Dockerfile) {
                 git checkout tags/0.2 && \\
                 ./waf configure && \\
                 ./waf build && \\
-                ./waf install && ldconfig && \\
-                \
-                git clone https://github.com/jakubhava/Distrace.git /opt/distrace && \\
-                cd /opt/distrace && \\
-                git checkout tags/${docker_tag} && \\
-                ./gradlew build -x check && \\
-                rm -rf /opt/nanomsg /opt/nanomsgxx  \$HOME/.gradle/caches/ && \\
-                apt-get -q -y remove --purge python git && \\
-                apt-get -q -y autoremove""".stripMargin()
+                ./waf install && ldconfig""".stripMargin()
     
     runCommand """\\
                 # Download Zipkin
@@ -88,6 +80,14 @@ task createDockerfile(type: Dockerfile) {
                 cd /opt/zipkin && \\
                 wget http://central.maven.org/maven2/io/zipkin/java/zipkin-server/2.11.7/zipkin-server-2.11.7-exec.jar
                """
+    
+    runCommand  """\\
+                git clone https://github.com/jakubhava/Distrace.git /opt/distrace && \\
+                cd /opt/distrace && \\
+                git checkout tags/${docker_tag} && \\
+                ./gradlew build -x check
+                """
+    
     workingDir "/opt/distrace"
     
     entryPoint "java -jar /opt/zipkin/zipkin-server-2.11.7-exec.jar & && /bin/bash"
